# os

./: .gdb_script  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  build.zig  design_ideas.md  foo  rust_target.json
.cargo/: config.toml
licenses/: EssenceOS_LICENSE.md
src/: acpi.zig  arch.S  cache.zig  cpp.zig  desktop.S  desktop.cpp  desktop.zig  drivers.zig  kernel.cpp  kernel.rs  kernel.zig  lib.rs  lib_original.rs  linker.ld  main.rs  main.zig  memory.zig  platform.zig  rnu_fs.zig  scheduler.zig  sync.zig  uefi.zig  x86_64.S  x86_64.zig  x86_64_new.S
src/arch/: mod.rs  x86.zig
src/arch/x86_64/: mod.rs
src/boot/: uefi.zig
src/boot/x86/: bios.S  bios_loader.S  bios_stage_1.S  bios_stage_2.S  mbr.S  mbr.zig  uefi_loader.asm
src/boot/x86/bios/: bios_stage_1.S  mbr.S
src/boot/x86/uefi/: uefi.S  uefi.zig
src/desktop/: desktop.zig
src/drivers/: acpi.zig  pci.rs  pci.zig  svga.zig
src/kernel/: arch.zig  array.zig  avl_tree.zig  drivers.zig  extern.c  files.zig  kernel.zig  linker.ld  logger.zig  main.zig  memory.rs  memory.zig  object.zig  pool.zig  scheduler.rs  scheduler.zig  scheduling.zig  sync.rs  sync.zig  synchronization.zig  syscall.zig  x86.S  x86.asm  x86.zig
src/kernel/arch/: mod.rs  x86_64.zig
src/kernel/arch/x86_64/: mod.rs
src/kernel/drivers/: ACPI.zig  AHCI.zig  PCI.zig  SVGA.zig  serial.zig
src/memory/: mod.rs
src/scheduler/: mod.rs
src/shared/: filesystem.zig  lib.zig  x.zig
src/synchronization/: mod.rs
