[package]
name = "renaissance-os"
version = "0.1.0"
authors = ["David Gonzalez Martin <davidgm94.work@protonmail.com"]

#[lib]
#crate-type = ["staticlib"]

[dependencies]
bitflags = "1.3.2"
scopeguard = { version = "1.1", default-features = false }

[profile.dev]
panic = 'abort'
debug = true
split-debuginfo = "packed"

[profile.release]
panic = 'abort'
